// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render fields-editor when there is no layername 1`] = `
<Fragment>
  <EuiFormRow
    display="columnCompressed"
    isInvalid={false}
    label="Source layer"
  >
    <EuiFieldText
      compressed={true}
      isInvalid={false}
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <ValidatedDualRange
    allowEmptyRange={false}
    compressed={true}
    formRowDisplay="columnCompressed"
    fullWidth={false}
    label={
      <span>
        Available levels
         
        <EuiIconTip
          color="subdued"
          content="Zoom levels where the layer is present in the tiles. This does not correspond directly to visibility. Layer data from lower levels can always be displayed at higher zoom levels (but not vice versa)."
          type="question"
        />
      </span>
    }
    max={24}
    min={0}
    onChange={[Function]}
    prepend="Zoom"
    showInput="inputWithPopover"
    showLabels={true}
    value={
      Array [
        4,
        14,
      ]
    }
  />
</Fragment>
`;

exports[`should render with fields 1`] = `
<Fragment>
  <EuiFormRow
    display="columnCompressed"
    isInvalid={false}
    label="Source layer"
  >
    <EuiFieldText
      compressed={true}
      isInvalid={false}
      onBlur={[Function]}
      onChange={[Function]}
      value="foobar"
    />
  </EuiFormRow>
  <ValidatedDualRange
    allowEmptyRange={false}
    compressed={true}
    formRowDisplay="columnCompressed"
    fullWidth={false}
    label={
      <span>
        Available levels
         
        <EuiIconTip
          color="subdued"
          content="Zoom levels where the layer is present in the tiles. This does not correspond directly to visibility. Layer data from lower levels can always be displayed at higher zoom levels (but not vice versa)."
          type="question"
        />
      </span>
    }
    max={24}
    min={0}
    onChange={[Function]}
    prepend="Zoom"
    showInput="inputWithPopover"
    showLabels={true}
    value={
      Array [
        4,
        14,
      ]
    }
  />
  <EuiFormRow
    label={
      <span>
        Fields
         
        <EuiIconTip
          color="subdued"
          content={
            <React.Fragment>
              Fields which are available in 
              <React.Fragment>
                <b>
                  foobar
                </b>
                .
                 
              </React.Fragment>
              These can be used for tooltips and dynamic styling.
            </React.Fragment>
          }
          type="question"
        />
      </span>
    }
  >
    <MVTFieldConfigEditor
      fields={Array []}
      onChange={[Function]}
    />
  </EuiFormRow>
</Fragment>
`;

exports[`should render without fields 1`] = `
<Fragment>
  <EuiFormRow
    display="columnCompressed"
    isInvalid={false}
    label="Source layer"
  >
    <EuiFieldText
      compressed={true}
      isInvalid={false}
      onBlur={[Function]}
      onChange={[Function]}
      value="foobar"
    />
  </EuiFormRow>
  <ValidatedDualRange
    allowEmptyRange={false}
    compressed={true}
    formRowDisplay="columnCompressed"
    fullWidth={false}
    label={
      <span>
        Available levels
         
        <EuiIconTip
          color="subdued"
          content="Zoom levels where the layer is present in the tiles. This does not correspond directly to visibility. Layer data from lower levels can always be displayed at higher zoom levels (but not vice versa)."
          type="question"
        />
      </span>
    }
    max={24}
    min={0}
    onChange={[Function]}
    prepend="Zoom"
    showInput="inputWithPopover"
    showLabels={true}
    value={
      Array [
        4,
        14,
      ]
    }
  />
</Fragment>
`;
